<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242424"
    tools:context=".ui.view.HomeActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/xList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/xIconErrorConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_cat"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/xMessage"
        app:layout_constraintEnd_toEndOf="@+id/xMessage"
        app:layout_constraintStart_toStartOf="@+id/xMessage"
        android:contentDescription="@string/gato_triste" />

    <TextView
        android:id="@+id/xMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/n_o_foi_poss_vel_carregar_as_imagens"
        android:textColor="#adadad"
        android:textSize="16sp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/xTryAgain"
        app:layout_constraintEnd_toEndOf="@+id/xTryAgain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/xTryAgain" />

    <Button
        android:id="@+id/xTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tentar_novamente"
        android:textColor="@color/light_gray"
        android:background="@drawable/background_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/xRefresh"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/circle"
        android:src="@drawable/ic_baseline_refresh_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/carregar_mais" />

</androidx.constraintlayout.widget.ConstraintLayout>